# VR4R_Assignment

./: Long Term Patrolling & Relay Positioning.pptx  README.md  run.py  run.sh  sphere.cpp
Content/Blueprints/: NodeGraph.uasset
Content/Materials/: NodeGraph_Material.uasset
Content/Python/: merge_graph_from_nodes.py  spawn_nodes_from_json.py
drone_coverage/: CMakeLists.txt  package.xml
drone_coverage/launch/: drone_collision_avoidance.launch  drone_coverage.launch  drone_pid_controller.launch  drones_collision_avoidance.launch  drones_coverage.launch  pid_drone_controller.launch  relay_node.launch
drone_coverage/scripts/: coverage_utils.py  drone_collision_avoidance.py  drone_coverage.py  drone_pid_controller.py  drones_collision_avoidance.py  drones_coverage.py  pid_drone_controller.py  relay_chain_helper.py  relay_node.py
drone_coverage_msgs/: CMakeLists.txt  package.xml
drone_coverage_msgs/msg/: CoveragePath.msg  DroneGoalPose.msg  RelayInstruction.msg  UpdateGraphWeights.msg
drone_coverage_msgs/srv/: ComputeCoveragePath.srv  GetNodesForDistance.srv  LoadCoverageGraph.srv  SetDroneGoalPose.srv
graph_loader/: CMakeLists.txt  package.xml
graph_loader/graphs/: collision_avoidance_test.json  disc.json  graph.json  mountain_graph.json  path.json
graph_loader/launch/: graph_knowledge.launch
graph_loader/scripts/: a_star.py  graph.py  graph_knowledge.py  graph_loader.py  sphere.py
graph_loader/src/: sphere.cpp  sphere2.cpp
